<resources>
    <string name="app_name">Court Counter</string>
    <string name="one">1</string>
    <string name="team_a">Chicago Bulls</string>
    <string name="team_b">Miami Heat</string>
    <string name="zero">0</string>
    <string name="add3">+3 points</string>
    <string name="add2">+2 points</string>
    <string name="free_throw">free throw</string>
    <string name="Fouls">Fouls</string>
    <string name="reset">reset</string>
    

</resources>
