<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/basket" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/pad16">

                <LinearLayout
                    android:layout_width="@dimen/pad0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad8"
                        android:paddingBottom="@dimen/pad16"
                        android:text="@string/team_a"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_team_name" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad8"
                        android:paddingBottom="@dimen/pad24"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_score" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pad8"
                        android:onClick="addThreeForTeamA"
                        android:paddingBottom="@dimen/pad8"
                        android:paddingLeft="@dimen/pad24"
                        android:paddingRight="@dimen/pad24"
                        android:text="@string/add3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pad8"
                        android:onClick="addTwoForTeamA"
                        android:paddingBottom="@dimen/pad8"
                        android:paddingLeft="@dimen/pad24"
                        android:paddingRight="@dimen/pad24"
                        android:text="@string/add2" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pad8"
                        android:onClick="freeThrowForTeamA"
                        android:paddingBottom="@dimen/pad8"
                        android:paddingLeft="@dimen/pad24"
                        android:paddingRight="@dimen/pad24"
                        android:text="@string/free_throw" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textsize_fouls"
                        android:text="@string/Fouls"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/team_a_fouls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad8"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_fouls" />


                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_width"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="@dimen/pad0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad8"
                        android:paddingBottom="@dimen/pad16"
                        android:text="@string/team_b"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_team_name" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad8"
                        android:paddingBottom="@dimen/pad24"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_score" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pad8"
                        android:onClick="addThreeForTeamB"
                        android:paddingBottom="@dimen/pad8"
                        android:paddingLeft="@dimen/pad24"
                        android:paddingRight="@dimen/pad24"
                        android:text="@string/add3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pad8"
                        android:onClick="addTwoForTeamB"
                        android:paddingBottom="@dimen/pad8"
                        android:paddingLeft="@dimen/pad24"
                        android:paddingRight="@dimen/pad24"
                        android:text="@string/add2" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/pad8"
                        android:onClick="freeThrowForTeamB"
                        android:paddingBottom="@dimen/pad8"
                        android:paddingLeft="@dimen/pad24"
                        android:paddingRight="@dimen/pad24"
                        android:text="@string/free_throw" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/pad24"
                        android:text="@string/Fouls"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/team_b_fouls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/pad8"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_fouls" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/resetpad"
                android:layout_marginTop="@dimen/top"
                android:onClick="reset"
                android:text="@string/reset" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>